chore(ci): commit local changes and create branch feature/auto-branch-20260412084600
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>